# avalanche

./: .gitignore  Cargo.toml  README.md  TODO.md  host.json
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
azure-functions/: host.json
azure-functions/proxy/: function.json
config/: config.json  config.json5
docs/: auth_api_proxy.hnbk  config.hnbk  postgres_dump.sql  test.hnbk
mars-auth/: Cargo.toml
mars-auth/src/: common.rs  lib.rs  transform.rs
mars-auth/src/auth/: mod.rs  service.rs
mars-auth/src/auth/awsauth/: mod.rs
mars-auth/src/auth/basicauth/: mod.rs
mars-auth/src/auth/digestauth/: mod.rs
mars-auth/src/auth/headerauth/: mod.rs
mars-auth/src/auth/noauth/: mod.rs
mars-auth/src/auth/x509/: mod.rs
mars-auth/src/transform/: jolt.rs  json_to_yaml.rs  xml.rs  yaml.rs
mars-azure-functions/: function.json
mars-config/: Cargo.toml
mars-config/src/: config.rs  consts.rs  error.rs  lib.rs
mars-entity/: Cargo.toml
mars-entity/src/: authtoken.rs  lib.rs  project.rs  query.rs  subproject.rs  user.rs  user_project.rs  utils.rs
mars-request-transform/: Cargo.toml
mars-request-transform/src/: common.rs  lib.rs
mars-request-transform/src/auth/: mod.rs  service.rs
mars-request-transform/src/auth/awsauth/: mod.rs
mars-request-transform/src/auth/hawkauth/: mod.rs
mars-request-transform/src/auth/x509/: mod.rs
mars-request-transform/src/transform/: jolt.rs  json_to_yaml.rs  xml.rs  yaml.rs
mars-rover/: Cargo.toml
mars-rover/src/: auth.rs  cli.rs  db.rs  file.rs  haha  json_project_manager.rs  lib.rs  main.rs  project.rs  simple.rs  user.rs
mars-rover/src/basicauth/: mod.rs
mars-rover/src/hawkauth/: mod.rs
resources/: badssl.com-client.p12
src/: auth.rs  cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  project.rs  simple.rs  user.rs  utils.rs
src/awsauth/: mod.rs
src/basicauth/: mod.rs
src/digestauth/: mod.rs
src/hawkauth/: mod.rs
src/headerauth/: mod.rs
src/noauth/: mod.rs
src/x509/: mod.rs
tower-boxed-service-sync/: Cargo.toml
tower-boxed-service-sync/src/: lib.rs
