[package]
name = "mars-rover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
aws-sigv4 = "0.48.0"
base64 = "0.13.0"
bytes = "1.2.1"
clap = { version = "3.2.22", features = ["derive"] }
dashmap = "5.4.0"
digest_auth = "0.3.0"
dyn-clone = "1.0.9"
hawk = {version = "4.0.0", features = ["use_openssl"], default-features = false}
http = "0.2.8"
http-body = "0.4.5"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
native-tls = "0.2.10"
pin-project = "1.0.12"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
time = "0.3.14"
tokio = { version = "1.20.1", features = ["full"] }
tokio-native-tls = "0.3.0"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = [
    "decompression-br",
    "set-header",
] }
url = "2.2.2"
