[package]
name = "mars-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.9", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
mars-config = { path = "../mars-config" }
