[package]
name = "mars-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mars-config = { path = "../mars-config" }
sea-orm = { workspace = true, features = ["sqlx-sqlite","runtime-tokio-native-tls",] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
