[package]
name = "mars-rover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = { workspace = true }
async-trait = { workspace = true }
aws-sigv4 = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
dyn-clone = { workspace = true }
http = { workspace = true }
log = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-tls = { workspace = true }
json5 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
mars-entity = { path = "../mars-entity", optional = true }
mars-config = { path = "../mars-config" }
mars-auth = { path = "../mars-auth" }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
], optional = true }
uuid = { workspace = true }
futures = {workspace = true}

[features]
awsauth = ["mars-auth/awsauth", "mars-auth/config"]
hawkauth = ["mars-auth/hawkauth", "mars-auth/config"]
x509auth = ["mars-auth/x509auth", "mars-auth/config"]
digestauth = ["mars-auth/digestauth", "mars-auth/config"]
basicauth = ["mars-auth/basicauth", "mars-auth/config"]
default = [
    "awsauth",
    "hawkauth",
    "x509auth",
    "digestauth",
    "basicauth",
    "sql",
    "mars-auth/transform",
]
sql = ["mars-entity", "sea-orm"]
