[package]
name = "mars-rover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = { workspace = true }
async-trait = { workspace = true }
aws-sigv4 = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
dyn-clone = { workspace = true }
http = { workspace = true }
log = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-tls = { workspace = true }
json5 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
mars-entity = { path = "../mars-entity", optional = true }
mars-config = { path = "../mars-config" }
mars-request-transform = { path = "../mars-request-transform" }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
], optional = true }
uuid = { workspace = true }
futures = {workspace = true}

[features]
awsauth = ["mars-request-transform/awsauth", "mars-request-transform/config"]
hawkauth = ["mars-request-transform/hawkauth", "mars-request-transform/config"]
x509auth = ["mars-request-transform/x509auth", "mars-request-transform/config"]
digestauth = ["mars-request-transform/digestauth", "mars-request-transform/config"]
basicauth = ["mars-request-transform/basicauth", "mars-request-transform/config"]
default = [
    "awsauth",
    "hawkauth",
    "x509auth",
    "digestauth",
    "basicauth",
    "sql",
    "mars-request-transform/transform",
]
sql = ["mars-entity", "sea-orm"]
