[package]
name = "tower-boxed-service-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-layer = { workspace = true }
tower-service = { workspace = true }
